<resources>
    <string name="app_name">Present</string>
    <string name="ok">OK</string>
    <string name="not_now">Not now</string>
    <string name="facebook_app_id">656395011206413</string>
    <string name="fb_login_protocol_scheme">fb568260326895978</string>
    <string name="social_facebook" translatable="false">https://www.facebook.com/letsbepresent</string>
    <string name="social_facebook_deep_link" translatable="false">fb://page/423747187992653</string>
    <string name="facebook_package_name" translatable="false">com.facebook.katana</string>
    <string name="social_twitter" translatable="false">https://twitter.com/letsbepresent</string>
    <string name="twitter_package_name" translatable="false">com.twitter.android</string>
    <string name="social_instagram" translatable="false">https://www.instagram.com/letsbepresent</string>
    <string name="social_instagram_deep_link" translatable="false">http://instagram.com/_u/letsbepresent</string>
    <string name="instagram_package_name" translatable="false">com.instagram.android</string>
    <string name="present_invite_title">Join me on Present! :)</string>
    <string name="present_invite_template">Join me on Present! %s</string>
    <string name="present_other_invite_template">Join %1$s on Present! %2$s</string>
    <string name="profile_share_title">Share profile</string>
    <string name="invite_to_app">Invite to Present</string>
    <string name="onboarding_subtitle">Find your good vibe tribe</string>
    <string name="onboarding_fb_prompt">Continue with Facebook</string>
    <string name="onboarding_fb_terms_of_service">Proceeding confirms that you agree to our Terms of Service</string>
    <string name="onboarding_fb_tos_url">http://present.co/tos.html</string>
    <string name="onboarding_why_facebook">https://present.co/whyfacebook</string>
    <string name="support_link">https://present.co/support</string>
    <string name="photo_upload_error">Couldn’t upload your photo. Please try again later.</string>
    <string name="looks_great">Looks great</string>
    <string name="onboarding_bio_title">Describe yourself</string>
    <string name="bio_hint">What makes you extraordinary?</string>
    <string name="onboarding_bio_next_button_text">@string/thats_me</string>
    <string name="onboarding_location_prompt">Allow Present to use your location?</string>
    <string name="location_snackbar_prompt">Please enable location permission to continue.</string>
    <string name="location_permission_settings_instructions">Open Settings, then tap Permissions and turn on Location.</string>
    <string name="location_settings_instructions">Location services are currently disabled on your device. Please open Settings, then turn on Location.</string>
    <string name="app_settings">App Settings</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="write_storage_title">Allow Present to use your phone’s storage?</string>
    <string name="write_storage_rationale_text">This lets Present store and access photos on your phone.</string>
    <string name="write_storage_settings_text">This lets Present store and access photos on your phone. /n/nTo enable this, click App Settings below and activate Storage under the Permissions menu.</string>
    <string name="read_contacts_title">Allow Present to read your contacts?</string>
    <string name="read_contacts_rationale_text">This lets Present access your contacts. We won’t save or share your contacts.</string>
    <string name="read_contacts_settings_instructions">This lets Present access your contacts. /n/nOpen Settings, then tap Permissions and turn on Contacts.</string>
    <string name="type_mobile">mobile</string>
    <string name="type_work">work</string>
    <string name="type_home">home</string>
    <string name="onboarding_interests_title">What are your interests?</string>
    <string name="onboarding_interests_button">@string/thats_me</string>
    <string name="thats_me">That’s me</string>
    <string name="interest_career">Career</string>
    <string name="interest_health">Health</string>
    <string name="interest_communities">Communities</string>
    <string name="interest_events">Events</string>
    <string name="interest_social_good">Social Good</string>
    <string name="interest_fitness">Fitness</string>
    <string name="interest_style">Style</string>
    <string name="interest_food_drink">Food &amp; Drink</string>
    <string name="interest_family">Family</string>
    <string name="interest_woman_owned">Woman-Owned</string>
    <string name="button_join">join</string>
    <string name="leave_circle_dialog_title">Leave circle?</string>
    <string name="leave_circle_dialog_message">This conversation will be removed from your “Joined Circles”, and you won’t receive any new updates.</string>
    <string name="leave">Leave</string>
    <string name="cancel">Cancel</string>
    <string name="owner_leave">You can’t leave this circle, because you are the creator.</string>
    <string name="creator">Creator</string>
    <plurals name="min">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <string name="no_results_yet_search_template">No results for ^1 yet</string>
    <string name="no_results_search_template">No results for ^1</string>
    <string name="cd_distance_icon">Icon of point on map</string>
    <string name="cd_group_image">Group cover image</string>
    <string name="name_your_circle">Name Your Circle</string>
    <string name="whats_your_circle_about">What’s this about?</string>
    <string name="cover_photo">Cover photo</string>
    <string name="add_categories">Add categories</string>
    <string name="categories">Categories</string>
    <string name="choose_up_to_three">Choose up to 3</string>
    <string name="add_circle">Add Circle</string>
    <string name="privacy">Privacy</string>
    <string name="generic_error">Sorry, something went wrong.</string>
    <string name="network_error">Sorry, there was an error. Please try again later.</string>
    <string name="facebook_network_error">Please make sure you have a network connection and try again.</string>
    <string name="tab_chat">CHAT</string>
    <string name="tab_info">INFO</string>
    <string name="chat_header_today">Today</string>
    <string name="chat_header_yesterday">Yesterday</string>
    <string name="message_hint">Say something&#8230;</string>
    <string name="empty_chat">*Crickets*\nGet the conversation started and add friends to the circle!</string>
    <string name="members">Members</string>
    <plurals name="members_w_num_template">
        <item quantity="one">%d Member</item>
        <item quantity="other">%d Members</item>
    </plurals>
    <plurals name="member_requests_w_num_template">
        <item quantity="one">%d Member Request</item>
        <item quantity="other">%d Member Requests</item>
    </plurals>
    <string name="location">Location</string>
    <string name="location_required">Location*</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="circle_no_description">Check out the chat for more details!</string>
    <string name="join_action">join</string>
    <string name="leave_action">leave</string>
    <string name="toggle_join_error">Couldn’t %s circle.</string>
    <string name="circle_share_template">Join me in the \"%1$s\" circle on Present! %2$s</string>
    <string name="mute_confirmation">Muted “%s”. You won’t receive any more notifications from this circle.</string>
    <string name="unmute_confirmation">Great! You’ll get all future notifications from “%s”.</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="delete_circle_success">Circle deleted.</string>
    <string name="delete_circle_confirm">Are you sure you want to delete this circle?  This can’t be undone.</string>
    <string name="report_circle_prompt">Tell us why you’re reporting this circle so we can help</string>
    <string name="report_inappropriate">It’s inappropriate</string>
    <string name="report_spam">It’s spam</string>
    <string name="report_submitted">Thanks! We’ll look into it ASAP.</string>
    <string name="report">Report</string>
    <string-array name="report_reasons">
        <item>@string/report_inappropriate</item>
        <item>@string/report_spam</item>
    </string-array>
    <string name="bio">Bio</string>
    <string name="interests">Interests</string>
    <string name="user_no_bio">I’m new to Present - say hi!</string>
    <string name="current_user_no_bio">@string/bio_hint</string>
    <string name="current_user_no_interests">What are you interested in?</string>
    <string name="perfect">Perfect</string>
    <string name="block">Block</string>
    <string name="blocked">Blocked</string>
    <string name="block_confirm_dialog_title">Are you sure you want to block %s?</string>
    <string name="block_confirm_dialog_message">Blocking will hide all content created by them.</string>
    <string name="transition_name_wordmark">wordmark</string>
    <string name="bottomNav">bottomNav</string>
    <string name="channel_name_general">General</string>
    <string name="channel_description_general">Miscellaneous updates about Present and your account</string>
    <string name="channel_id_general">\"general\"</string>
    <string name="channel_id_after_hours">\"after-hours\"</string>
    <string name="channel_name_after_hours">After Hours</string>
    <string name="channel_description_after_hours">Updates from Present and your account after daylight hours</string>
    <string name="lorem_long" translatable="false">Lorem ipsum dolor sit amet, te brute docendi omittam eos, no eum justo eligendi sadipscing, et labore facilisis nec. Molestie tractatos te has, probo prompta bonorum sed cu. In saperet dignissim vim, ei sed constituto scribentur, gubergren voluptatibus nec no. Unum lorem mollis qui an, pericula appellantur adversarium vix ex. Et dicat homero apeirian vim, ad regione similique eam. Ne consul feugiat suavitate quo. Id unum rebum mea, scaevola vivendum ut cum. No mel discere platonem, in illum constituto honestatis sed, ei dicat quidam explicari nam. Homero tincidunt deterruisset quo in. Vel labore officiis cu.</string>
    <string name="lorem_heading" translatable="false">Lorem ipsum dolor sit amet, te brute docendi omittam eos, no eum justo eligendi sadipscing</string>
    <string name="lorem_name" translatable="false">Lorem Ipsum</string>
    <string name="share">Share</string>
    <string name="joined">Joined</string>
    <string name="join">Join</string>
    <string name="add_your_friends">Add Your Friends</string>
    <string name="follow_heart_string">Heart</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="override_home_url">Override Home URL</string>
    <string name="home_url">Home URL</string>
    <string name="time">Time</string>
    <string name="nearby_feed_url">Nearby Feed URL</string>
    <string name="override_nearby_feed_url">Override Nearby Feed URL</string>
    <string name="current_location">Current location</string>
    <string name="link">Link</string>
    <string name="facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="tweet">Tweet</string>
    <string name="overflow">Overflow menu</string>
    <string name="circles">Circles</string>
    <string name="notifications">Notifications</string>
    <string name="friends">Friends</string>
    <string name="share_profile">Share Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="pre_approval_subtitle">People that are pre-approved will be able to join this circle</string>
    <string name="pre_approve">Who can join</string>
    <string name="contacts">Contacts</string>
    <string name="add_friends">Add Friends</string>
</resources>