<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/overflow"
        android:title="@string/overflow"
        android:icon="@drawable/ic_overflow"
        app:showAsAction="always" >
        <menu android:id="@+id/menu">
            <item
                android:id="@+id/mute"
                android:icon="@drawable/ic_notifications_off"
                android:title="@string/mute"/>
            <item android:id="@+id/edit"
                android:icon="@drawable/ic_edit"
                android:title="@string/edit"/>
            <item android:id="@+id/delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete"/>
            <item android:id="@+id/report"
                android:icon="@drawable/ic_report"
                android:title="@string/report"
                />
        </menu>
    </item>
</menu>