<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="HardcodedText">
    <item
        android:id="@+id/endpoint"
        android:title="Production" />

    <item android:id="@+id/overrideHomeUrl"
        android:title="@string/override_home_url"
        app:actionLayout="@layout/menu_switch"
        />

    <item android:id="@+id/homeUrl"
        android:title="@string/home_url"
        app:actionLayout="@layout/menu_edit_text"
        />

    <item android:id="@+id/overrideNearbyFeedUrl"
        android:title="@string/override_nearby_feed_url"
        app:actionLayout="@layout/menu_switch"
        />

    <item android:id="@+id/nearbyFeedUrl"
        android:title="@string/nearby_feed_url"
        app:actionLayout="@layout/menu_edit_text"
        />

    <item android:id="@+id/overrideGender"
        android:title="Gender"/>

    <item android:id="@+id/blockList"
        android:title="Clear block list"/>

    <item android:id="@+id/locationSwitcher"
        android:title="@string/current_location"/>

    <item android:id="@+id/debugAnalytics"
        android:title="Show analytics onscreen"/>

    <item android:id="@+id/logOut"
        android:title="Log out"/>

    <item android:id="@+id/divider"
        android:title="--------------------"/>

    <item
        android:id="@+id/clearOnce"
        android:title="Clear 'once' events"/>

    <item android:id="@+id/clearCircles"
        android:title="Clear circles"/>
</menu>