<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tabs"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:text="@string/friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.tabs.TabItem
            android:text="@string/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.google.android.material.tabs.TabItem
            android:text="@string/contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>



