<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/spacing_small">

    <TextView
        android:id="@+id/title"
        style="@style/H2.NonBold"
        tools:text="@string/pre_approve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="25dp"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingStart="@dimen/spacing_small"
        app:layout_constraintEnd_toStartOf="@+id/checkmark"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/value"
        style="@style/H2.NonBold"
        tools:text="@string/friends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="25dp"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingStart="@dimen/spacing_small"
        app:layout_constraintEnd_toStartOf="@+id/checkmark"
        />

    <ImageView
        android:id="@+id/checkmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_small"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/title"
        app:srcCompat="@drawable/ic_check" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="@dimen/spacing_small"
        android:paddingEnd="@dimen/spacing_small"
        app:layout_constraintTop_toBottomOf="@id/title"
        style="@style/Body"
        tools:text="@string/pre_approval_subtitle"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>